style.css
/**
 * Theme Name: Feather
 * Theme URI: https://www.github.org/ereckers/feather/
 * Description: A simple and easy responsive WordPress bootstrap3 starter theme from Red Bridge Internet.
 * Version: 1.0.1
 * Author: Ed Reckers 
 * Author URI: http://www.redbridgenet.com
 * License: GNU General Public License v2.0
 * License URI: http://www.gnu.org/licenses/gpl-2.0.html
 * Text Domain: redbridge
 * Domain Path: /languages/
 * Tags: feather, easy, simple, starter, quickstart, responsive, bootstrap, bootstrap3
 * 
 * This theme, like WordPress, is licensed under the GPL.
 * Use it to make something cool, have fun, and share what you've learned with others.
 *
 * Copyright (c) 2014 Ed Reckers.  All rights reserved.
 * http://www.redbridgenet.com
 */
body {
	margin: 0 auto;
	-moz-osx-font-smoothing: grayscale;
	-webkit-font-smoothing: antialiased;
	font-weight: 300;
	font-family: 'Roboto', sans-serif;
	text-rendering: optimizeLegibility;
}
h1, h2, h3 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 400;
}
.main {
	min-height: 400px;
}
.site-footer {
	margin-top: 50px;
}
.sidebar {
	padding-top: 25px;
}

/*
 * Some Styling for WordPress Specific Elements
 */
.entry-meta .published,
.entry-meta .byline.author {
	padding-right: 12px;
}
.entry-meta {
	margin-bottom: 15px;
}
li.comment {
	padding: 15px;
	border: 1px solid #EDEDED;
}
.comment-author {
	font-size: 16px;
}
.comment-meta a {
	font-size: 13px;
	color: #696969;
}
.author-description {
	padding: 15px;
	border: 1px solid #EDEDED;
}
.alignleft {
	float: left;
}
.alignright {
	float: right;
}
.aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

